# ragline

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.sample  Dockerfile  main.py  pyproject.toml  test.py
backend/core/: config.py  logger.py
backend/database/: chroma.py
backend/document/: models.py  repository.py  service.py
backend/pipeline/: document_processor.py  query_processor.py
backend/query/: models.py  service.py
backend/routers/: document.py  query.py
backend/scripts/: fix.sh  lint.sh
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  prettier.config.js  vite.config.js
frontend/src/: App.jsx  index.css
