[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.8",
]

# Ruff Linter & Formatter Configuration
[tool.ruff]
line-length = 88 
target-version = "py310"  
select = ["E", "F", "I", "UP", "B"]  
ignore = ["E501"]  

# Black Formatting Configuration
[tool.black]
line-length = 88

# isort Configuration
[tool.isort]
profile = "black"
line_length = 88 


[tool.mypy]
python_version = "3.10"
strict = true 
ignore_missing_imports = true