[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "chroma-haystack>=3.1.0",
    "chromadb>=1.0.8",
    "docling>=2.31.0",
    "haystack-ai>=2.13.1",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "openai>=1.78.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "ruff>=0.11.8",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.2",
]

# Ruff Linter & Formatter Configuration
[tool.ruff]
line-length = 88 
target-version = "py310"  
lint.select = ["E", "F", "I", "UP", "B"]  
lint.ignore = ["E501"]  

# Black Formatting Configuration
[tool.black]
line-length = 88
preview = true



# isort Configuration
[tool.isort]
profile = "black"
line_length = 88 
combine_as_imports = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


[tool.mypy]
python_version = "3.10"
strict = true 
ignore_missing_imports = true
